<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leo.lweather.MainActivity">

    <android.widget.RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/locationLabelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="@string/locationLabel"
                android:textSize="20sp" />

            <Button
                android:id="@+id/goButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignBottom="@id/cityLabel"
                android:layout_alignEnd="@+id/cityLabel"
                android:layout_alignRight="@+id/cityLabel"
                android:layout_alignTop="@id/cityLabel"
                android:layout_margin="2dp"
                android:background="@drawable/rounded_corner"
                android:text="Go"
                android:visibility="visible" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/cityNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationLabelLayout"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center">

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/cityNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterLocation"
                android:linksClickable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cityNameLayout"
            android:paddingLeft="5dp"
            android:text="@string/descriptionLabel"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionLabel"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@id/icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/description"
                android:background="@drawable/rounded_corner"
                android:contentDescription="ICON" />
        </RelativeLayout>

        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionLayout"
            android:paddingLeft="5dp"
            android:text="@string/temperatureLabel"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/temperatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperatureLabel"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/windSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperatureLayout"
            android:paddingLeft="5dp"
            android:text="@string/windSpeedLabel"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/windLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/windSpeedLabel"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center">

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:menu="@menu/bottom_navigation_main" />


    </android.widget.RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>
